# fastq2fasta-example-galaxy

include/: gc_counter.hpp
src/: CMakeLists.txt  gc_counter.cpp  gc_counter_main.cpp
workflow/planemo/: CMakeLists.txt  fastq_to_fasta.xml  fastq_to_fasta.xml.in  gc_counter.xml  gc_counter.xml.in  test_planemo.sh
workflow/planemo/test-data/: 2.fasta  2_gccount.csv
